--- a/dynamic.css
+++ b/dynamic.css
@@ -17,9 +17,9 @@
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
-    padding: 5px;
+    padding: 10px;
 }
 
 .col-default-10 {width: 10%;}
